--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,21 @@
             <version>${version.swagger-springmvc}</version>
         </dependency>
 
-        <!--com.fasterxml.jackson工具-->
+        <!--com.fasterxml.jackson工具
+        Jackson主要包含了3个模块：
+
+        jackson-core
+        jackson-annotations
+        jackson-databind
+        其中，jackson-annotations依赖于jackson-core，jackson-databind又依赖于jackson-annotations。
+        Jackson有三种方式处理Json：
+
+        使用底层的基于Stream的方式对Json的每一个小的组成部分进行控制
+        使用Tree Model，通过JsonNode处理单个Json节点
+        使用databind模块，直接对Java对象进行序列化和反序列化
+        通常来说，我们在日常开发中使用的是第3种方式，有时为了简便也会使用第2种方式，比如你要从一个很大的Json对象中只读取那么一两个字段的时候，采用databind方式显得有些重，JsonNode反而更简单。
+        -->
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
